--- a/backend/.env-example
+++ b/backend/.env-example
@@ -1,1 +1,23 @@
-OPENAI_API_KEY=<API-KEY>
+# Database Configuration
+DATABASE_URL=postgresql://user:password@host:port/database
+
+# OpenAI Configuration
+OPENAI_API_KEY=sk-...
+
+# Frontend URL (for CORS)
+FRONTEND_URL=https://your-app.vercel.app
+
+# Embedding Model (default: text-embedding-3-small)
+EMBEDDING_MODEL=text-embedding-3-small
+
+# LLM Model (default: gpt-3.5-turbo)
+LLM_MODEL=gpt-3.5-turbo
+
+# Embedding Dimension (1536 for text-embedding-3-small, 3072 for text-embedding-3-large)
+EMBEDDING_DIMENSION=1536
+
+# RAG Configuration
+RETRIEVAL_K=3
+
+# Logging
+LOG_LEVEL=INFO
