Fix Dockerfile paths for Railway build context

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -9,13 +9,14 @@ RUN apt-get update && apt-get install -y \
     && rm -rf /var/lib/apt/lists/*
 
 # Copy requirements first for better caching
-COPY requirements.txt .
+# Build context is root, so copy from backend/
+COPY backend/requirements.txt .
 
 # Install Python dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy application code
-COPY . .
+# Copy application code from backend directory
+COPY backend/ .
 
 # Expose port (Railway will override with $PORT env var)
 EXPOSE 8000
