--- a/railway.toml
+++ b/railway.toml
@@ -1,6 +1,7 @@
 [build]
 builder = "DOCKERFILE"
 dockerfilePath = "backend/Dockerfile"
+# Build context is the repository root
 
 [deploy]
 startCommand = "uvicorn main:app --host 0.0.0.0 --port $PORT"
