Fix PORT environment variable expansion in startCommand

--- a/railway.toml
+++ b/railway.toml
@@ -4,7 +4,7 @@ dockerfilePath = "backend/Dockerfile"
 # Build context is the repository root
 
 [deploy]
-startCommand = "uvicorn main:app --host 0.0.0.0 --port $PORT"
+startCommand = "sh -c 'uvicorn main:app --host 0.0.0.0 --port ${PORT:-8000}'"
 restartPolicyType = "ON_FAILURE"
 healthcheckPath = "/health"
 healthcheckTimeout = 100
